--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,18 +4,18 @@
 	<string name="app_name">停车宝</string>
 	<string name="NoSignalException">无法连接到网络，请检查网络配置</string>
 	<string name="json_exception">json解析错误</string>
-    <string name="connect_server_exception">服务器连接失败</string>
-    <!-- 上拉下拉 -->
-    <string name="xlistview_header_hint_normal">下拉刷新</string>
-    <string name="xlistview_header_hint_ready">松开刷新</string>
-    <string name="xlistview_header_hint_loading">正在加载...</string>
-    <string name="xlistview_header_last_time">最后 更新：</string>
-    <string name="xlistview_footer_hint_normal">上拉看更多</string>
-    <string name="xlistview_footer_hint_ready">松开载入更多</string>
+	<string name="connect_server_exception">服务器连接失败</string>
+	<!-- 上拉下拉 -->
+	<string name="xlistview_header_hint_normal">下拉刷新</string>
+	<string name="xlistview_header_hint_ready">松开刷新</string>
+	<string name="xlistview_header_hint_loading">正在加载...</string>
+	<string name="xlistview_header_last_time">最后 更新：</string>
+	<string name="xlistview_footer_hint_normal">上拉看更多</string>
+	<string name="xlistview_footer_hint_ready">松开载入更多</string>
 
 	<string name="search_parking">寻车位</string>
 	<string name="speak">请大声说出</string>
- 	<string name="position">你要查找的位置</string>
+	<string name="position">你要查找的位置</string>
 
 	<!-- 科大讯飞的 后续修改 -->
 	<string name="app_id">53591207</string>
@@ -47,4 +47,14 @@
 	<string name="preference_key_iat_vad">iat_vad</string>
 	<string name="preference_key_iat_show">iat_show</string>
 	<string name="preference_default_isr_engine">iat</string>
+
+	<!-- 更多 -->
+	<string name="more"> 更多</string>
+	<string name="about">\t上海泊友慧网络科技有限公司是由中国最大的停车场媒体运营商—
+		“泊客传媒”联合国内著名投资机构共同发起创建；旨在依托“泊客传媒”遍布全国的停车场渠道资源以及强大的资金与技术支持，通过整合国内外最先进的智慧停车管理系统，借助日益发达的移动互联网及云技术，快速打造中国最强大的智慧停车O2O服务平台—“停车宝”（中国特色PARKME），为中国各大中心城市日益突出的停车难问题提供最优的全方位解决方案。\n\t“停车宝”将依托公司强大的落地执行力与资金实力实现快速迭代，快速覆盖，为广大车主带来惊喜不断。
+版权@泊友慧2014
+	</string>
+	
+	<string name ="abount"></string>
+
 </resources>
